添加异常返回json的代码

--- a/handwin-dudu/pom.xml
+++ b/handwin-dudu/pom.xml
@@ -201,8 +201,12 @@
 		</dependency>
 		<!-- json -->
 		<dependency>
-			<groupId>com.google.code.gson</groupId>
-			<artifactId>gson</artifactId>
+			<groupId>org.codehaus.jackson</groupId>
+			<artifactId>jackson-core-asl</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.codehaus.jackson</groupId>
+			<artifactId>jackson-mapper-asl</artifactId>
 		</dependency>
 		<!-- tiles -->
 		<dependency>
