--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 		<tiles-version>3.0.1</tiles-version>
 		<jackson-version>1.9.12</jackson-version>
 	</properties>
-
+	
 	<distributionManagement>
 		<repository>
 			<id>nexus-releases</id>
@@ -70,6 +70,11 @@
 				<groupId>cn.v5</groupId>
 				<artifactId>handwin-framework</artifactId>
 				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>cn.v5</groupId>
+				<artifactId>server_common</artifactId>
+				<version>v02b02.0-SNAPSHOT</version>
 			</dependency>
 			<!-- spring -->
 			<dependency>
@@ -132,6 +137,17 @@
 				<groupId>org.springframework</groupId>
 				<artifactId>spring-aop</artifactId>
 				<version>${spring.version}</version>
+			</dependency>
+			<dependency>
+		        <groupId>org.springframework.data</groupId>
+		        <artifactId>spring-data-redis</artifactId>
+		        <version>1.1.1.RELEASE</version>
+		    </dependency>
+			<!-- Jedis -->
+			<dependency>
+				<groupId>redis.clients</groupId>
+				<artifactId>jedis</artifactId>
+				<version>2.1.0</version>
 			</dependency>
 			<!-- logger -->
 			<dependency>
@@ -340,6 +356,42 @@
 				<groupId>commons-collections</groupId>
 				<artifactId>commons-collections</artifactId>
 				<version>3.2.1</version>
+			</dependency>
+			<dependency>
+                <groupId>commons-pool</groupId>
+                <artifactId>commons-pool</artifactId>
+                <version>1.6</version>
+            </dependency>
+			<!-- apache httpcomponents -->
+			<dependency>
+				<groupId>org.apache.httpcomponents</groupId>
+				<artifactId>httpclient</artifactId>
+				<version>4.3.2</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.httpcomponents</groupId>
+				<artifactId>httpcore</artifactId>
+				<version>4.3.1</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.httpcomponents</groupId>
+				<artifactId>httpmime</artifactId>
+				<version>4.3.2</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.httpcomponents</groupId>
+				<artifactId>httpcore-nio</artifactId>
+				<version>4.3.1</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.httpcomponents</groupId>
+				<artifactId>httpclient-cache</artifactId>
+				<version>4.3.2</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.httpcomponents</groupId>
+				<artifactId>httpasyncclient</artifactId>
+				<version>4.0</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
