--- a/handwin-httpserver/src/main/resources/config.properties
+++ b/handwin-httpserver/src/main/resources/config.properties
@@ -1,9 +1,11 @@
 #datasource
 db.driver=com.mysql.jdbc.Driver
-db.url=jdbc:mysql://localhost:3306/test?autoReconnect=true&useUnicode=true&characterEncoding=utf8
-db.username=root
-db.password=123456
-db.jndi=java:comp/env/jdbc/handwin
+db.url=jdbc:mysql://192.168.1.246:3306/faceshow?autoReconnect=true&useUnicode=true&characterEncoding=utf8
+db.username=faceshow
+db.password=faceshow123
 
-redis.host=127.0.0.1:6379
+redis.host=192.168.1.246
+redis.port=6379
+
+db.jndi=java:comp/env/jdbc/handwin
 redis.jndi=java:comp/env/redis/handwin
