--- a/hanwin-framework/pom.xml
+++ b/hanwin-framework/pom.xml
@@ -93,10 +93,6 @@
 			<artifactId>logback-classic</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-log4j12</artifactId>
-		</dependency>
-		<dependency>
 			<groupId>commons-logging</groupId>
 			<artifactId>commons-logging</artifactId>
 		</dependency>
@@ -141,7 +137,10 @@
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
 		</dependency>
-
+		<dependency>
+		    <groupId>com.couchbase.client</groupId>
+		    <artifactId>couchbase-client</artifactId>
+		</dependency>
 		<!-- apache commons -->
 		<dependency>
 			<groupId>commons-lang</groupId>
