--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<url>http://maven.apache.org</url>
 
 	<properties>
-		<spring.version>3.2.2.RELEASE</spring.version>
+		<spring.version>4.0.2.RELEASE</spring.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.build.timestamp>yyyyMMddHHmm</maven.build.timestamp>
 		<slf4j.version>1.7.1</slf4j.version>
@@ -22,6 +22,8 @@
 		<project.repository.host>http://192.168.1.182:8081/nexus/content</project.repository.host>
 		<tiles-version>3.0.1</tiles-version>
 		<jackson-version>1.9.12</jackson-version>
+		<metrics-version>3.0.0-RC4</metrics-version>
+		<spring-data-couchbase-version>1.0.0.RC1</spring-data-couchbase-version>
 	</properties>
 	
 	<distributionManagement>
@@ -61,6 +63,14 @@
 				<enabled>true</enabled>
 			</snapshots>
 		</repository>
+		<repository>
+	        <id>spring-milestones</id>
+	        <name>Spring Milestones</name>
+	        <url>http://repo.spring.io/milestone</url>
+	        <snapshots>
+	            <enabled>false</enabled>
+	        </snapshots>
+	    </repository>
 	</repositories>
 
 	<dependencyManagement>
@@ -143,6 +153,23 @@
 		        <artifactId>spring-data-redis</artifactId>
 		        <version>1.1.1.RELEASE</version>
 		    </dependency>
+		    <dependency>
+		        <groupId>org.springframework.data</groupId>
+		        <artifactId>spring-data-couchbase</artifactId>
+		        <version>${spring-data-couchbase-version}</version>
+		    </dependency>
+		    <!-- Monitor tool -->
+		    <dependency>
+			    <groupId>com.ryantenney.metrics</groupId>
+			    <artifactId>metrics-spring</artifactId>
+			    <version>${metrics-version}</version>
+			</dependency>
+			<!-- couchbase -->
+			<dependency>
+			    <groupId>com.couchbase.client</groupId>
+			    <artifactId>couchbase-client</artifactId>
+			    <version>1.3.2</version>
+			</dependency>
 			<!-- Jedis -->
 			<dependency>
 				<groupId>redis.clients</groupId>
@@ -180,11 +207,11 @@
 				<artifactId>logback-classic</artifactId>
 				<version>${logback.version}</version>
 			</dependency>
-			<dependency>
+			<!-- <dependency>
 				<groupId>org.slf4j</groupId>
 				<artifactId>slf4j-log4j12</artifactId>
 				<version>${slf4j.version}</version>
-			</dependency>
+			</dependency> -->
 			<dependency>
 				<groupId>commons-logging</groupId>
 				<artifactId>commons-logging</artifactId>
@@ -393,6 +420,30 @@
 				<artifactId>httpasyncclient</artifactId>
 				<version>4.0</version>
 			</dependency>
+			<!-- validate -->
+			<dependency>
+                <groupId>javax.validation</groupId>
+                <artifactId>validation-api</artifactId>
+                <version>1.1.0.Final</version>
+            </dependency>
+            <dependency>
+				<groupId>org.hibernate</groupId>
+				<artifactId>hibernate-validator</artifactId>
+				<version>5.0.3.Final</version>
+			</dependency>
+			<!-- test -->
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>4.11</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-test</artifactId>
+                <version>${spring.version}</version>
+                <scope>test</scope>
+            </dependency>
 		</dependencies>
 	</dependencyManagement>
 
